--- a/learn-promise/package.json
+++ b/learn-promise/package.json
@@ -4,6 +4,10 @@
   "main": "y",
   "license": "MIT",
   "scripts": {
-    "dev": "node ./src/index.js"
+    "dev": "node ./src/index.js",
+    "test": "promises-aplus-tests ./src/MyPromise"
+  },
+  "devDependencies": {
+    "promises-aplus-tests": "^2.1.2"
   }
 }
